fix(base): remove persistent scrollbar

--- a/src/style.css
+++ b/src/style.css
@@ -5,10 +5,9 @@
 @import "open-props/theme.light.switch.min.css" layer(design-system.theme-light);
 @import "open-props/theme.dark.switch.min.css" layer(design-system.theme-dark);
 
-
 @layer base {
   html {
-    overflow-y: scroll;
+    overflow-y: auto;
     scrollbar-width: thin;
 
     --input-color-block-size: 2.5rem;
@@ -21,7 +20,6 @@
   }
 }
 
-
 @layer layout {
   .app {
     display: grid;
@@ -30,7 +28,6 @@
     padding-block: var(--size-fluid-3);
     place-items: start center;
     padding-inline: var(--app-extra-small-screen-padding-inline);
-
 
     /* xs-n-above */
     @media (width >=360px) {
@@ -41,7 +38,6 @@
     @media (width >=480px) {
       padding-inline: var(--app-large-screen-padding-inline);
     }
-
   }
 
   .header {
@@ -52,13 +48,11 @@
   }
 
   .headline {
-
     /* md-n-below */
     @media (width < 768px) {
       font-size: var(--font-size-7);
     }
   }
-
 
   .select {
     background-color: inherit;
@@ -67,7 +61,6 @@
     padding-block: 0;
     padding-inline-start: 0;
 
-
     &:has(.named-css:checked) {
       color: var(--link-visited);
     }
@@ -75,23 +68,18 @@
     &:has(.hdr:checked) {
       color: light-dark(var(--pink-7), var(--pink-3));
     }
-
   }
 
   .option {
     color: black;
     font-size: var(--font-size-5);
-
   }
-
 
   .input-color {
     inline-size: 100%;
     block-size: var(--input-color-block-size);
   }
-
 }
-
 
 @layer layout {
   .main {
@@ -110,9 +98,6 @@
 
     inline-size: 100%;
     gap: var(--size-6);
-
-
-
   }
 
   .picked-color {
@@ -139,9 +124,7 @@
   }
 }
 
-
 @layer layout {
-
   .footer {
     --_alpha: 5%;
     position: fixed;
@@ -158,10 +141,12 @@
 
     /* opacityOK */
     @media (prefers-reduced-transparency: no-preference) {
-
-      background-color: color-mix(in oklch, var(--surface-2), transparent var(--_alpha));
+      background-color: color-mix(
+        in oklch,
+        var(--surface-2),
+        transparent var(--_alpha)
+      );
       backdrop-filter: blur(28px);
-
     }
 
     /* xs-n-above */
@@ -174,19 +159,15 @@
       padding-inline: var(--app-large-screen-padding-inline);
     }
 
-
     @media (prefers-reduced-transparency: no-preference) {
       --_alpha: 30%;
     }
-
   }
-
 
   .distance-mode {
     display: flex;
     align-items: center;
     gap: var(--size-2);
-
 
     /* sm-n-below */
     @media (width < 480px) {
@@ -198,13 +179,10 @@
       font-size: var(--font-size-0);
     }
 
-
     .app:has(.hdr:checked) & {
       visibility: hidden;
     }
-
   }
-
 
   .footer-controls-group {
     display: flex;
@@ -232,11 +210,9 @@
         display: none;
       }
     }
-
   }
 
   .common-btn {
-
     --_icon-size: var(--size-px-5);
     box-shadow: none;
     border-width: 0;
@@ -254,7 +230,6 @@
     }
 
     /* md-n-below */
-
   }
 
   .moon {
@@ -262,27 +237,23 @@
   }
 }
 
-
-
-
 @layer overrides {
-
   .sun {
-    [data-theme='dark'] & {
+    [data-theme="dark"] & {
       display: none;
     }
 
-    [data-theme='light'] & {
+    [data-theme="light"] & {
       display: block;
     }
   }
 
   .moon {
-    [data-theme='dark'] & {
+    [data-theme="dark"] & {
       display: block;
     }
 
-    [data-theme='light'] & {
+    [data-theme="light"] & {
       display: none;
     }
   }
@@ -295,15 +266,12 @@
   }
 }
 
-
 @layer overrides {
   .span-show-md {
-
     /* md-n-above */
     @media (width >=768px) {
       display: none;
     }
-
   }
 
   .span-show-lg {
